@@ -1,3 +1,8 @@
+2007-04-17  Christian Persch  <chpe@gnome.org>
+
+	* gconf/gconf.c: (gconf_key_check), (gconf_valid_key): Fix strings
+	used for errors about invalid keys. Bug #406251.
+
 2007-03-31  Loïc Minier  <lool@dooz.org>
 
 	* configure.in: Check for the lber lib and append it to LDAP_LIBS if
